--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
     <header>
         <h1>Projeto ConectaTech ADA</h1>
-        <p>Documentação Completa da Monitoria Voluntária FATEC Carapicuíba</p>
+        <p>Documentação Completa da Monitoria no Espaço ADA na FATEC Carapicuíba</p>
     </header>
 
     <nav>
